--- a/src/presentation/views/error.pug
+++ b/src/presentation/views/error.pug
@@ -3,6 +3,7 @@ extends layout
 block content
   main.container
     h1= title
+    h2= message
     p
       b= message
     a(href='/', class='back-button') ↩️🏠 Volver
